--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta property="og:url" content="https://yaoleksa.github.io/theLambda/" />
         <meta property="og:image" content="./imgs/lambda.png" />
         <link rel="icon" href="./imgs/lambda.png" />
+        <link rel="stylesheet" href="./style/index.css">
     </head>
     <body>
         <div id="root"></div>
