--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta property="og:title" content="The Lambda" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://yaoleksa.github.io/theLambda/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:image" content="./imgs/lambda.png" />
         <link rel="icon" href="./imgs/lambda.png" />
         <link rel="stylesheet" href="./style/index.css">
